# cdk-ansible-examples

./: .gitignore  README.md  app-l1.code-workspace  app-l2.code-workspace  cargo-generate.toml
.github/workflows/: test-templates.yml
app-l1/: .gitignore  Cargo.toml  README.md  mise.toml  pyproject.toml
app-l1/crates/my-app/: Cargo.toml
app-l1/crates/my-app/src/: inventory.rs  main.rs
app-l1/crates/my-app/src/stack/: sample_stack.rs
app-l2/: Cargo.toml  README.md  ansible.cfg  mise.toml
app-l2/crates/my-app/: Cargo.toml
app-l2/crates/my-app/src/: inventory.rs  lib.rs  main.rs
app-l2/crates/my-app/src/stack/: mod.rs  sample_stack.rs
cli-init/: .gitignore  Cargo.toml  README.md  cdk-ansible-examples.code-workspace  mise.toml  pyproject.toml
cli-init/crates/cdkam_ansible/: Cargo.toml
cli-init/crates/cdkam_ansible/src/: lib.rs
cli-init/crates/cdkam_ansible/src/m/ansible/builtin/: mod.rs
cli-init/crates/my-app/: Cargo.toml
cli-init/crates/my-app/src/: lib.rs  main.rs
cli-init/crates/my-app/src/inventory/: mod.rs
cli-init/crates/my-app/src/stack/: sample_stack.rs
cli-init/crates/my-app/src/stacks/: mod.rs  sample_stack.rs
cli-init/xtasks/test/: cdk-ansible-cli-init
