[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
description = "cdk-ansible-examples"
homepage = "https://github.com/pollenjp/cdk-ansible-examples"
repository = "https://github.com/pollenjp/cdk-ansible-examples"
authors = ["pollenjp <polleninjp@gmail.com>"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
cdk-ansible = "0.3"
cdkam = "0.3"
chrono = "0.4"
futures = "0.3"

[workspace.lints.clippy]
new_without_default = "allow"
