[package]
name = "my-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
cdkam_ansible = { workspace = true, features = ["ansible-builtin"] }
cdk-ansible.workspace = true
cdkam = { workspace = true, features = ["ansible"] }

anyhow.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
